--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 # REACT_APP_BACKEND_URL=https://noona-todoapp-be.herokuapp.com
 REACT_APP_BACKEND_URL=http://localhost:5000
-REACT_APP_BACKEND_PROXY = https://hyoan-todo-list-v2.netlify.app 
+# REACT_APP_BACKEND_PROXY = https://hyoan-todo-list-v2.netlify.app
+REACT_APP_BACKEND_PROXY = https://bucolic-kelpie-e89a1a.netlify.app
+
 
