--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-# REACT_APP_BACKEND_URL=https://noona-todoapp-be.herokuapp.com
 REACT_APP_BACKEND_URL=http://localhost:5000
-#REACT_APP_BACKEND_PROXY = https://hyoan-todo-list-v2.netlify.app
 #REACT_APP_BACKEND_URL= https://todo-list-demo.shop/api/tasks
-
+REACT_APP_BACKEND_PROXY = https://todo-demo-v2.netlify.app
 
 
